--- a/mi-aplicacion/src/pages/LandingPage/components/Glimpse.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/Glimpse.css
@@ -254,7 +254,7 @@
 @media (max-width: 576px) {
     .glimpse-wrapper {
         padding: 1rem;
-        height: 55vh;
+        height: 60vh;
         background-color: var(--corporative-color);
     }
 
@@ -278,5 +278,13 @@
 
     .footer-text {
         font-size: 1.2rem;
+    }
+
+    .scroll-progress {
+        display: none;
+    }
+
+    .progress-bar {
+        display: none;
     }
 }
