--- a/mi-aplicacion/src/pages/South/components/SouthCard.css
+++ b/mi-aplicacion/src/pages/South/components/SouthCard.css
@@ -39,9 +39,10 @@
 
 .tarifa-info h2 {
     font-weight: 100;
-    font-family: var(--serif-one-font);
+    font-family: var(--serif-italic);
     font-style: italic;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    
 }
 
 .info-features,
