--- a/mi-aplicacion/src/pages/Contact/Contact2.css
+++ b/mi-aplicacion/src/pages/Contact/Contact2.css
@@ -42,7 +42,7 @@
     margin-top: 1rem;
 }
 
-.contact-two-info {
+/* .contact-two-info {
     flex: 0.3;
     display: flex;
     flex-direction: column;
@@ -56,12 +56,30 @@
     height: auto;
     position: relative;
     overflow: hidden;
+} */
+
+.contact-two-info {
+    flex: 0.3;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    text-align: left;
+    box-sizing: border-box;
+    padding: 0 6rem;
+    padding-right: 2.5rem;
+    font-weight: 100;
+    height: auto;
+    position: relative;
+    overflow: hidden;
 }
 
 .contact-two-info h4 {
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    /* align-items: center; */
+    align-items: left;
+    /* justify-content: flex-end; */
+    justify-content: flex-start;
     padding-top: 1rem;
     margin-bottom: 0.5rem;
     text-transform: uppercase;
@@ -109,6 +127,45 @@
     color: var(--corporative-color);
     /* color: var(--light-color); */
 }
+
+/* Filas de horarios */
+.mornings,
+.afternoons {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 1.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.time-label {
+    /* flex: 0 0 auto; */
+    margin-right: 2rem;
+    
+        width: 60px; /* Ancho fijo */
+        flex-shrink: 0;
+        margin-right: 2rem;
+    
+}
+
+.time-label h5 {
+    font-weight: 300;
+    color: var(--dark-color);
+    margin: 0;
+}
+
+.time-hours {
+    flex: 1;
+    text-align: left;
+}
+
+.time-hours p {
+    font-weight: 200;
+    color: var(--dark-color);
+    margin: 0;
+    margin-bottom: 0.3rem;
+}
+
 
 /* Media queries actualizados */
 @media screen and (max-width: 991px) {
