aplicada fuente serif italic a todas las cursivas

--- a/mi-aplicacion/src/pages/LandingPage/components/Glimpse.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/Glimpse.css
@@ -66,6 +66,13 @@
     font-family: var(--serif-one-font);
 }
 
+.intro-content h1 em {
+    font-family: inherit;
+    font-family: var(--serif-italic);
+      font-style: italic;
+      font-size: 2rem;
+  }
+
 .footer-text h1 {
     text-transform: none;
 }
