--- a/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
+++ b/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
@@ -89,8 +89,6 @@
 }
 
 .search-form i {
-  font-style: italic;
-  /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-family: var(--serif-one-font);
   color: var(--light-color);
   cursor: pointer;
@@ -98,6 +96,10 @@
   padding: 0 2px;
   font-weight: 500;
   transition: color 0.3s ease, border-color 0.3s ease;
+
+  font-family: var(--serif-italic);
+    font-style: italic;
+    font-size: 1.9rem;
 }
 
 
