--- a/mi-aplicacion/src/pages/IndividualHome/Components/InfoProperty2.css
+++ b/mi-aplicacion/src/pages/IndividualHome/Components/InfoProperty2.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     background-color: var(--taupe-light-color);
+    background-color: var(--sand-color);
     padding-top: 2rem;
     padding-bottom: 2rem;
     border-top: 1px solid var(--corporative-color);
