--- a/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
+++ b/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
@@ -5,9 +5,12 @@
   margin-bottom: 0rem;
   text-align: center;
   background-color: transparent;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/detalleCocina.jpg');
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/detalleCocina.jpg'); */
+  background-image: url('/images/inmo2.png');
   background-size: cover;
-  background-position: center 80%;
+  /* background-position: center 80%; */
+  background-position: center;
+
   width: 100%;
   height: 90vh;
   justify-content: center;
