--- a/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
+++ b/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
@@ -22,7 +22,9 @@
   font-size: 1.8rem;
   font-weight: 400;
   line-height: 1.6;
-  color: var(--light-color);
+  /* color: var(--light-color); */
+  color: var(--dark-color);
+
   margin: 0;
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-family: var(--serif-one-font);
@@ -51,7 +53,9 @@
   font-size: 1.7rem;
   font-weight: 400;
   line-height: 1.6;
-  color: var(--light-color);
+  /* color: var(--light-color); */
+  color: var(--dark-color);
+
   margin: 0;
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
   font-family: var(--serif-one-font);
@@ -93,7 +97,9 @@
 
 .search-form i {
   font-family: var(--serif-one-font);
-  color: var(--light-color);
+  /* color: var(--light-color); */
+  color: var(--dark-color);
+
   cursor: pointer;
   position: relative;
   padding: 0 2px;
@@ -114,8 +120,10 @@
   width: 24px;
   height: 24px;
   margin-left: 8px;
-  background-color: var(--light-color);
-  color: var(--dark-color);
+  /* background-color: var(--light-color);
+  color: var(--dark-color); */
+  background-color: var(--dark-color);
+  color: var(--light-color);
   border-radius: 50%;
   font-size: 1.4rem;
   font-weight: 100;
@@ -192,7 +200,8 @@
 
 .view-results-button {
   background-color: transparent;
-  color: var(--light-color);
+  /* color: var(--light-color); */
+  color: var(--dark-color);
   border: none;
   padding: 10px 24px;
   border-radius: 6px;
@@ -226,7 +235,9 @@
   bottom: 8px;
   width: 75%;
   height: 1.5px;
-  background-color: var(--light-color);
+  /* background-color: var(--light-color); */
+  background-color: var(--dark-color);
+
   transform: translateX(-50%);
   transition: width 0.3s ease;
 
