--- a/mi-aplicacion/src/pages/LandingPage/components/Glimpse.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/Glimpse.css
@@ -221,11 +221,11 @@
         padding: 2rem;
     }
 
-    .glimpse-scrollable-content {
+    /* .glimpse-scrollable-content {
         flex-direction: column;
         overflow-y: auto;
         overflow-x: hidden;
-    }
+    } */
 
     .glimpse-image {
         width: 100%;
@@ -277,20 +277,26 @@
 @media (max-width: 576px) {
     .glimpse-wrapper {
         padding: 1rem;
-        height: 60vh;
+        max-height: 65vh;
         background-color: var(--corporative-color);
+
     }
 
     .intro-content {
         /* height: 200px; */
         padding: 1.5rem;
-        min-height: 50vh;
-    }
+        /* min-height: 70vh; */
+        height: 60vh;
+        flex: 0 0 40%;     
+        min-width: 60%; 
+        justify-content: flex-end;  
+
+}
 
 
 
     .intro-content h2 {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .intro-content h3 {
